// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie Card Componennt renders correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 200,
      "marginRight": 20,
      "opacity": 1,
      "width": 200,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "gray",
          "borderWidth": 1,
          "flex": 2,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "gray",
            "fontSize": 50,
          },
          undefined,
          Object {
            "fontFamily": "Entypo",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "white",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "rgb(255, 255, 255)",
            "flex": 1,
          }
        }
      >
        <Text>
           
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#991F25",
              "flex": 1,
              "fontWeight": "bold",
              "textAlign": "right",
            }
          }
        />
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": "gray",
          "marginTop": 12,
        }
      }
    />
  </View>
</View>
`;

exports[`Movie Card Componennt renders movie poster 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 200,
      "marginRight": 20,
      "opacity": 1,
      "width": 200,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "http://image.tmdb.org/t/p/w500",
      }
    }
    style={
      Object {
        "flex": 2,
        "height": null,
        "width": null,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "white",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "rgb(255, 255, 255)",
            "flex": 1,
          }
        }
      >
        <Text>
           
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#991F25",
              "flex": 1,
              "fontWeight": "bold",
              "textAlign": "right",
            }
          }
        />
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": "gray",
          "marginTop": 12,
        }
      }
    />
  </View>
</View>
`;
